feat(m18-b): fix persona name inversion and inject candidate name across dialogue pipeline